[bumpversion]
current_version = 0.8.11
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]?)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}

[metadata]
name = memote
url = https://github.com/opencobra/memote
download_url = https://pypi.org/pypi/memote/
author = Moritz E. Beber
author_email = morbeb@biosustain.dtu.dk
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = the genome-scale metabolic model test suite
long_description = file: README.rst
keywords =
	memote
	metabolic
	constrained-based
	model
	COBRA
	test suite
	quality control
	quality assurance

[options]
zip_safe = False
install_requires =
	click <7.0
	click-configfile
	click-log
	six
	future
	pytest >=4.0
	gitpython
	pandas >=0.20.1
	Jinja2
	cookiecutter
	cobra >0.13.3
	python-libsbml
	ruamel.yaml >=0.15
	travispy
	pygithub
	travis-encrypt
	sympy
	sqlalchemy
	requests
	importlib_resources
	numpydoc
	pylru
	goodtables ==1.0.0
	depinfo
	equilibrator_api;python_version>='3.5'
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
tests_require =
    tox
packages = find:

[options.package_data]
memote.experimental.schemata =
	*.json
memote.suite =
	tests/*.py
memote.suite.templates =
	*.html
	*.yml
memote.support.data =
	*.csv
	*.json

[options.entry_points]
console_scripts =
	memote = memote.suite.cli.runner:cli

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:memote/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/conf.py]
search = "{current_version}"
replace = "{new_version}"

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
	__init__.py
	docs

[pydocstyle]
match_dir = memote

[tool:pytest]
testpaths = tests
filterwarnings =
	ignore::DeprecationWarning:libsbml

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_import = 2
known_first_party = memote
known_third_party = cobra,libsbml,click_configfile
not_skip = __init__.py

