[bumpversion]
current_version = 0.9.12
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]?)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}

[metadata]
name = memote
url = https://github.com/opencobra/memote
download_url = https://pypi.org/pypi/memote/
author = Moritz E. Beber
author_email = morbeb@biosustain.dtu.dk
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = the genome-scale metabolic model test suite
long_description = file: README.rst
keywords =
	memote
	metabolic
	constrained-based
	model
	COBRA
	test suite
	quality control
	quality assurance

[options]
zip_safe = False
install_requires =
	click
	click-configfile
	click-log
	six
	future
	pytest >=4.0
	gitpython
	pandas
	Jinja2
	cookiecutter
	cobra >=0.15.3
	lxml
	ruamel.yaml >=0.15
	travis-encrypt<1.2.0
	sympy
	sqlalchemy
	requests
	importlib_resources
	numpydoc
	pylru
	goodtables ==1.0.0
	depinfo
	requests
	equilibrator_api <0.2;python_version>='3.5'
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
tests_require =
	tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
memote.experimental.schemata =
	*.json
memote.suite =
	tests/*.py
memote.suite.templates =
	*.html
	*.yml
memote.support.data =
	*.csv
	*.json

[options.entry_points]
console_scripts =
	memote = memote.suite.cli.runner:cli

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/memote/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/conf.py]
search = "{current_version}"
replace = "{new_version}"
