[metadata]
name = memote
url = https://github.com/opencobra/memote
download_url = https://pypi.org/project/memote/
project_urls =
    Source Code = https://github.com/opencobra/memote
    Documentation = https://memote.readthedocs.io
    Bug Tracker = https://github.com/opencobra/memote/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
    Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = the genome-scale metabolic model test suite
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	memote
	metabolic model
	constraint-based
	COBRA
	test suite
	quality control
	quality assurance

[options]
zip_safe = False
install_requires =
	click
	click-configfile
	click-log
	six
	future
	pytest >=4.0
	gitpython
	pandas
	Jinja2
	cookiecutter
	cobra >=0.15.3
	lxml
	ruamel.yaml >=0.15
	travis-encrypt<1.2.0
	sympy
	sqlalchemy
	requests
	importlib_resources
	numpydoc
	pylru
	goodtables ~=2.0
	depinfo
	requests
python_requires = >=3.6
tests_require =
	tox
packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.package_data]
memote.experimental.schemata =
	*.json
memote.suite =
	tests/*.py
memote.suite.templates =
	*.html
	*.yml
memote.support.data =
	*.csv
	*.json

[options.entry_points]
console_scripts =
	memote = memote.suite.cli.runner:cli

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/memote/_version.py
versionfile_build = memote/_version.py
tag_prefix =
parentdir_prefix = memote-
